# LibAmbient

./: .gitignore  CMakeLists.txt
src/: libambient.cpp  libambient.hpp
